<resources>
    <string name="app_name">pantrypal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Home Screen Strings! -->
    <string name="logo">logo</string>
    <string name="PantryPal">PantryPal</string>
    <string name="Settings">Settings</string>
    <string name="RecentReceipts">Recent Receipts</string>
    <string name="ExpiringSoon">Expiring Soon</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>