<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/logo"
                android:minWidth="64dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="232dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:lineBreakWordStyle="phrase"
                android:text="@string/PantryPal"
                android:fontFamily="@font/font2"
                android:textStyle="bold"
                android:typeface="monospace" />


            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/Settings"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/baskldasd"
                tools:layout_weight="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:gravity="center"
            android:text="@string/RecentReceipts"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentReceiptList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:gravity="center"
            android:text="@string/ExpiringSoon"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expiringList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_weight="1" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/pantry1"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

<!--<<<<<<< HEAD-->
<!--    <ImageButton-->
<!--        android:id="@+id/settings_button"-->
<!--        android:layout_width="54dp"-->
<!--        android:layout_height="44dp"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginTop="27dp"-->
<!--        android:layout_marginEnd="28dp"-->
<!--        app:srcCompat="@drawable/settings" />-->

<!--=======-->
<!--&gt;>>>>>> e1c1c82c500fe4854fba0f94fcfd99aa6d244c5d-->
</RelativeLayout>